--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/js/tipoDato.js"></script>
     <script src="/js/clase_1.js"></script>
+    <script src="/js/clase_2.js"></script>
 </head>
 <body>
     <h1>Hola mundo!</h1>
