--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <!-- <script src="/js/clase_1.js"></script> -->
     <!-- <script src="/js/clase_2.js"></script> -->
+    <!-- <script src="/js/clase_4.js"></script> -->
     <script src="/js/clase_3.js"></script>
 </head>
 <body>
